<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <repositories>
        <repository>
            <id>koobe-nexus-snapshots</id>
            <url>http://nexus.teamcollab.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <groupId>koobe</groupId>
    <artifactId>KoobeGlobalEditor</artifactId>
    <version>1.0</version>

    <name>Koobe Global Editor</name>
    <packaging>war</packaging>

    <properties>

        <!-- Project -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.source.encoding>UTF-8</project.source.encoding>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>

        <!-- Maven GWT Plugin -->
        <gwt.compile.skip>false</gwt.compile.skip>
        <gwt.draftcompile>false</gwt.draftcompile>
        <gwt.copyWebapp>true</gwt.copyWebapp>

        <!-- Amazon Elastic BeansTalk -->
        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
        <koobe.application.version>${maven.build.timestamp}</koobe.application.version>
        <beanstalk.versionLabel>${project.artifactId}_${koobe.application.version}</beanstalk.versionLabel>

        <!--Spring-->
        <springframework.version>4.0.0.RELEASE</springframework.version>
        <springframework.data.version>1.4.3.RELEASE</springframework.data.version>

        <!--Koobe-->
        <koobe.common.version>0.0.2-SNAPSHOT</koobe.common.version>

        <!--GWT, GWTP-->
        <gwt.version>2.5.1</gwt.version>
        <gwtp.version>1.0.1</gwtp.version>
        <gwt.localWorkers>8</gwt.localWorkers>
        <gwt.dnd.version>3.2.3</gwt.dnd.version>

        <!--Gin-->
        <gin.version>2.0.0</gin.version>
        <guice.version>3.0</guice.version>
        <aopalliance.version>1.0</aopalliance.version>

        <!--GWT jQuery, jQuery UI-->
        <gwtquery.version>1.4.0</gwtquery.version>
        <gwtquery-ui.version>1.1-SNAPSHOT</gwtquery-ui.version>

        <!--GWT Bootstrap-->
        <gwtbootstrap3.version>0.6-SNAPSHOT</gwtbootstrap3.version>

        <!--Unit Test-->
        <junit.version>4.11</junit.version>
        <jukito.version>1.1</jukito.version>

        <!--GWT Maven Plugin-->
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
    </properties>

    <dependencies>

        <!--Spring Framework -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${springframework.version}</version>
		</dependency>

		<!-- Spring data -->
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>${springframework.data.version}</version>
		</dependency>

		<!-- Koobe Widget Library -->
		<dependency>
			<groupId>koobe</groupId>
			<artifactId>KoobeWidgetLibrary</artifactId>
			<version>${koobe.common.version}</version>
			<scope>compile</scope>
		</dependency>

		<!--KoobeCommonLibrary -->
		<dependency>
			<groupId>koobe</groupId>
			<artifactId>KoobeCommonCore</artifactId>
			<version>${koobe.common.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>koobe</groupId>
			<artifactId>KoobeCommonData</artifactId>
			<version>${koobe.common.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>koobe</groupId>
			<artifactId>KoobeCommonStorage</artifactId>
			<version>${koobe.common.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>koobe</groupId>
			<artifactId>KoobeCommonConverter</artifactId>
			<version>${koobe.common.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>koobe</groupId>
			<artifactId>KoobeCommonModel</artifactId>
			<version>${koobe.common.version}</version>
			<scope>compile</scope>
		</dependency>

        <!-- Servlet -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.4</version>
            <scope>provided</scope>
        </dependency>

        <!-- Amazon Web Services SDK -->
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk</artifactId>
            <version>1.6.11</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.3.1</version>
        </dependency>

        <!--Apache Commons-->
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.9</version>
        </dependency>

        <!--GWT-->
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwt.version}</version>
        </dependency>

        <!-- GWT D&D -->
        <dependency>
            <groupId>com.allen-sauer.gwt.dnd</groupId>
            <artifactId>gwt-dnd</artifactId>
            <version>${gwt.dnd.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- MVP component -->
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-mvp-client</artifactId>
            <version>${gwtp.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Dispatch component -->
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-dispatch-client</artifactId>
            <version>${gwtp.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-dispatch-server-guice</artifactId>
            <!-- Or, if you use spring:
            <artifactId>gwtp-dispatch-server-spring</artifactId> -->
            <version>${gwtp.version}</version>
        </dependency>

        <!-- Crawler component -->
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-crawler</artifactId>
            <version>${gwtp.version}</version>
        </dependency>

        <!-- Annotation component -->
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-processors</artifactId>
            <version>${gwtp.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Tester component -->
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-tester</artifactId>
            <version>${gwtp.version}</version>
            <scope>test</scope>
        </dependency>

        <!--GWT-Bootstrap3-->
        <dependency>
            <groupId>org.gwtbootstrap3</groupId>
            <artifactId>gwtbootstrap3</artifactId>
            <version>${gwtbootstrap3.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.gwtbootstrap3</groupId>
            <artifactId>gwtbootstrap3-extras</artifactId>
            <version>${gwtbootstrap3.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- GWT-jQuery -->
        <dependency>
            <groupId>com.googlecode.gwtquery</groupId>
            <artifactId>gwtquery</artifactId>
            <version>${gwtquery.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwtquery-ui</artifactId>
            <version>${gwtquery-ui.version}</version>
            <scope>provided</scope>
        </dependency>

        <!--DI dependencies, GIN-->
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-servlet</artifactId>
            <version>${guice.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-assistedinject</artifactId>
            <version>${guice.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <version>${gin.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>aopalliance</groupId>
            <artifactId>aopalliance</artifactId>
            <version>${aopalliance.version}</version>
        </dependency>

        <!-- lib-gwt-file -->
        <dependency>
            <groupId>org.vectomatic</groupId>
            <artifactId>lib-gwt-file</artifactId>
            <version>0.3.4</version>
        </dependency>
        <dependency>
            <!-- Must appear before gwt-user to allow injection of custom UiBinder parser in classpath -->
            <groupId>org.vectomatic</groupId>
            <artifactId>lib-gwt-svg</artifactId>
            <version>0.5.8</version>
        </dependency>


        <!-- Testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jukito</groupId>
            <artifactId>jukito</artifactId>
            <version>${jukito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}_${project.version}</finalName>
        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.java</include>
                    <include>**/*.gwt.xml</include>
                    <include>**/*.css</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.version}</version>
                <configuration>
                    <skip>${gwt.compile.skip}</skip>
                    <draftCompile>${gwt.draftcompile}</draftCompile>
                    <encoding>UTF-8</encoding>
                    <runTarget>devmode.html</runTarget>
                    <hostedWebapp>${webappDirectory}</hostedWebapp>
                    <copyWebapp>${gwt.copyWebapp}</copyWebapp>
                    <logLevel>INFO</logLevel>
                    <style>DETAILED</style>
                    <disableCastChecking>true</disableCastChecking>
                    <disableClassMetadata>true</disableClassMetadata>
                    <compileReport>false</compileReport>
                    <!--<extraJvmArgs>-Xmx1024m -Xms1024m -Xss1024k -XX:MaxPermSize=256m</extraJvmArgs>-->
                    <extraParam>true</extraParam>
                    <!--<localWorkers>16</localWorkers>-->
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat6-maven-plugin</artifactId>
                <version>2.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.2</version>
                <executions>
                    <execution>
                        <id>tomcat-run</id>
                        <goals>
                            <goal>exec-war-only</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <!--
                            <serverXml>src/main/tomcatconf/server.xml</serverXml>
                            -->
                            <warRunDependencies>
                                <warRunDependency>
                                    <dependency>
                                        <groupId>a groupId</groupId>
                                        <artifactId>and artifactId</artifactId>
                                        <version>version</version>
                                        <type>war</type>
                                    </dependency>
                                    <contextPath>/</contextPath>
                                </warRunDependency>
                            </warRunDependencies>
                            <enableNaming>true</enableNaming>
                            <extraDependencies>
                                <extraDependency>
                                    <groupId>org.apache.derby</groupId>
                                    <artifactId>derby</artifactId>
                                    <version>10.1.3.1</version>
                                </extraDependency>
                                <extraDependency>
                                    <groupId>javax.mail</groupId>
                                    <artifactId>mail</artifactId>
                                    <version>1.4</version>
                                </extraDependency>
                            </extraDependencies>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>br.com.ingenieux</groupId>
                <artifactId>beanstalk-maven-plugin</artifactId>
                <version>1.1.1</version>
                <configuration>
                    <region>ap-southeast-1</region>
                    <applicationName>Koobe-RD</applicationName>
                    <cnamePrefix>kooberd-globaleditor</cnamePrefix>
                    <environmentName>kooberd-globaleditor</environmentName>
                    <s3Bucket>koobe-deploy</s3Bucket>
                    <s3Key>${project.artifactId}/${beanstalk.versionLabel}.war</s3Key>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
